--- a/websites/src/components/Header.css
+++ b/websites/src/components/Header.css
@@ -1,6 +1,25 @@
+.main-header{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+align-items: center;
+background-color: black;
+
+}
+
+.header-navbar{
+  display:flex;
+  flex-direction: row;
+  column-gap: 3px;
+  color: white;
+
+}
+
+
+
 .dropbtn {
-    background-color: #cacecd;
-    color: rgb(41, 39, 39);
+    background-color: transparent;
+    color: white;
     padding: 16px;
     font-size: 16px;
     border: none;
@@ -9,6 +28,7 @@
   .dropdown {
     position: relative;
     display: flex;
+    
   }
   
   .dropdown-content {
@@ -31,7 +51,7 @@
   
   .dropdown:hover .dropdown-content {display: block;}
   
-  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+  .dropdown:hover .dropbtn {background-color: #425342;}
 
   .buttons-in-header{
     display:flex;
@@ -43,9 +63,4 @@
 
   }
 
-  .section{
-    display:flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-  align-items: center;
-  }
+  
