--- a/websites/src/components/Button.css
+++ b/websites/src/components/Button.css
@@ -1,17 +1,18 @@
 .custom-button{
     border: none;
-    border-radius: 5px;
+    border-radius: 0px;
     color: white;
     width: fit-content;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 16px;
     padding: 10px 20px 10px 20px;
-    box-shadow: 2px 2px 6px grey;
+    /* box-shadow: 2px 2px 6px grey; */
     transition: .25s;
     overflow: hidden;
     position: relative;
     }
+
     .custom-button:after {
     content: "";
     background: lightgray;
@@ -34,8 +35,10 @@
     .blue{
     background-color: #4885ed;
     }
-    .orange{
-    background-color: #Fac898;
+    .Black{
+    background-color: #1a1919;
+    border:2px solid white;
+
     }
     .red{
     background-color: #db3236;
@@ -46,11 +49,11 @@
     background-color: #2b5294;
     box-shadow: 2px 2px 20px grey;
     }
-    .button-container button.custom-button.green:hover{
-    cursor: pointer;
-    background-color: #298039;
-    box-shadow: 2px 2px 20px grey;
-    }
+    .button-container button.custom-button.Black:hover{
+        cursor: pointer;
+        background-color: #121312;
+        /*box-shadow: 2px 2px 20px rgb(238, 234, 234);*/
+        }
     .button-container button.custom-button.red:hover{
     cursor: pointer;
     background-color: #9e2427;
