--- a/websites/src/components/Button.css
+++ b/websites/src/components/Button.css
@@ -56,6 +56,6 @@
         }
     .button-container button.custom-button.red:hover{
     cursor: pointer;
-    background-color: #9e2427;
-    box-shadow: 2px 2px 20px grey;
+    background-color: #e7343d;
+    /* box-shadow: 2px 2px 20px grey; */
     }
