--- a/websites/src/components/Header.css
+++ b/websites/src/components/Header.css
@@ -27,6 +27,15 @@ background-color: black;
     padding: 16px;
     font-size: 16px;
     border: none;
+    display:flex;
+    align-items: center;
+  }
+
+  .dropbtn a { 
+    color: inherit;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: flex;
   }
   
   .dropdown {
@@ -55,7 +64,7 @@ background-color: black;
     background-color: #f3eeee;
   }
   
-  .dropdown:hover .dropdown-content {
+  .options:hover .dropdown-content {
     display: block;
   }
   
