--- a/websites/src/components/Header.css
+++ b/websites/src/components/Header.css
@@ -24,7 +24,8 @@ background-color: black;
 .dropbtn {
     background-color: transparent;
     color: white;
-    padding: 16px;
+    padding-right: 16px;
+    padding-left: 16px;
     font-size: 16px;
     border: none;
     display:flex;
@@ -48,7 +49,7 @@ background-color: black;
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
+    min-width: 180px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
