applied flex to drop-down contents

--- a/websites/src/components/Header.css
+++ b/websites/src/components/Header.css
@@ -24,8 +24,8 @@ background-color: black;
 .dropbtn {
     background-color: transparent;
     color: white;
-    padding-right: 16px;
-    padding-left: 16px;
+    /* padding-right: 16px;
+    padding-left: 16px; */
     font-size: 16px;
     border: none;
     display:flex;
